--- a/shared/StockAppAbp.Shared.Hosting.AspNetCore/StockAppAbp.Shared.Hosting.AspNetCore/StockAppAbp.Shared.Hosting.AspNetCore.csproj
+++ b/shared/StockAppAbp.Shared.Hosting.AspNetCore/StockAppAbp.Shared.Hosting.AspNetCore/StockAppAbp.Shared.Hosting.AspNetCore.csproj
@@ -7,7 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="9.1.1" />
     <PackageReference Include="Volo.Abp.Core" Version="9.1.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+	<PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\StockAppAbp.Shared.Hosting.Messages\StockAppAbp.Shared.Hosting.Messages\StockAppAbp.Shared.Hosting.Messages.csproj" />
+    <ProjectReference Include="..\..\StockAppAbp.Shared.Hosting\StockAppAbp.Shared.Hosting\StockAppAbp.Shared.Hosting.csproj" />
   </ItemGroup>
 
 </Project>
