--- a/services/Inventory/src/InventoryService.HttpApi.Host/appsettings.json
+++ b/services/Inventory/src/InventoryService.HttpApi.Host/appsettings.json
@@ -10,9 +10,10 @@
     },
     "AuthServer": {
         "Authority": "https://localhost:44362",
-        "RequireHttpsMetadata": true,
-        "SwaggerClientId": "IdentityService_Swagger",
-        "CertificatePassPhrase": "1e498e0a-32d4-4378-acbf-f590f64b7f35"
+        "RequireHttpsMetadata": false,
+        "SwaggerClientId": "swagger",
+        "MetadataAddress": "https://localhost:44362"
+
     },
     "StringEncryption": {
         "DefaultPassPhrase": "xt83dGXzdGuLO3yr"
