--- a/services/identity/src/IdentityService.DbMigrator/appsettings.json
+++ b/services/identity/src/IdentityService.DbMigrator/appsettings.json
@@ -22,10 +22,12 @@
             },
             "OrderingService": {
                 "ClientId": "OrderingService",
+                "ClientSecret": "1q2w3e*",
                 "RootUrl": "https://localhost:44327"
             },
             "InventoryService": {
                 "ClientId": "InventoryService",
+                "ClientSecret": "1q2w3e*",
                 "RootUrl": "https://localhost:44305"
             }
 
