--- a/services/identity/src/IdentityService.HttpApi.Host/appsettings.json
+++ b/services/identity/src/IdentityService.HttpApi.Host/appsettings.json
@@ -12,7 +12,7 @@
     },
     "AuthServer": {
         "Authority": "https://localhost:44362",
-        "RequireHttpsMetadata": true,
+        "RequireHttpsMetadata": false,
         "SwaggerClientId": "IdentityService_Swagger",
         "CertificatePassPhrase": "efb307f9-6799-4275-bbd3-ce11da30c1af"
     },
@@ -23,15 +23,17 @@
         "Applications": {
             "IdentityService": {
                 "ClientId": "IdentityService",
-                "RootUrl": "https://localhost:44362"
+                "RootUrl": "https://localhost:44362",
             },
             "OrderingService": {
                 "ClientId": "OrderingService",
-                "RootUrl": "https://localhost:44327"
+                "RootUrl": "https://localhost:44327",
+                "ClientSecret": "1q2w3e*"
             },
             "InventoryService": {
                 "ClientId": "InventoryService",
-                "RootUrl": "https://localhost:44305"
+                "RootUrl": "https://localhost:44305",
+                "ClientSecret": "1q2w3e*"
             }
         }
     }
