--- a/services/ordering/src/OrderingService.HttpApi.Host/appsettings.json
+++ b/services/ordering/src/OrderingService.HttpApi.Host/appsettings.json
@@ -10,9 +10,9 @@
     },
     "AuthServer": {
         "Authority": "https://localhost:44362",
-        "RequireHttpsMetadata": true,
-        "SwaggerClientId": "IdentityService_Swagger",
-        "CertificatePassPhrase": "9e2fda2b-8959-434a-90f6-2d8c8dce0917"
+        "RequireHttpsMetadata": false,
+        "SwaggerClientId": "swagger",
+        "MetadataAddress": "https://localhost:44362"
     },
     "StringEncryption": {
         "DefaultPassPhrase": "WmtT8ddStMgqVxSi"
