--- a/shared/StockAppAbp.Shared.Hosting.AspNetCore/StockAppAbp.Shared.Hosting.AspNetCore/StockAppAbp.Shared.Hosting.AspNetCore.csproj
+++ b/shared/StockAppAbp.Shared.Hosting.AspNetCore/StockAppAbp.Shared.Hosting.AspNetCore/StockAppAbp.Shared.Hosting.AspNetCore.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
     <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="9.1.1" />
     <PackageReference Include="Volo.Abp.Core" Version="9.1.1" />
