--- a/services/Inventory/src/InventoryService.HttpApi.Host/appsettings.json
+++ b/services/Inventory/src/InventoryService.HttpApi.Host/appsettings.json
@@ -3,8 +3,9 @@
         "SelfUrl": "https://localhost:44305",
         "DisablePII": false,
         "HealthCheckUrl": "/health-status",
-        "CorsOrigins": "https://*.IdentityService.com,https://localhost:44362"
-    },
+        "CorsOrigins": "https://*.IdentityService.com,https://localhost:44362,http://localhost:4200",
+        "RedirectAllowedUrls": "http://localhost:4200"
+       },
     "ConnectionStrings": {
         "Default": "Server=MMAGED\\SQLEXPRESS;Database=InventoryService;Trusted_Connection=True;TrustServerCertificate=true"
     },
