Add Application Angular App For Ordering Service

--- a/services/ordering/src/OrderingService.HttpApi.Host/appsettings.json
+++ b/services/ordering/src/OrderingService.HttpApi.Host/appsettings.json
@@ -3,7 +3,8 @@
         "SelfUrl": "https://localhost:44327",
         "DisablePII": false,
         "HealthCheckUrl": "/health-status",
-        "CorsOrigins": "https://*.IdentityService.com,https://localhost:44362"
+        "CorsOrigins": "https://*.IdentityService.com,https://localhost:44362,http://localhost:4300",
+        "RedirectAllowedUrls": "http://localhost:4300"
     },
     "ConnectionStrings": {
         "Default": "Server=MMAGED\\SQLEXPRESS;Database=OrderingService;Trusted_Connection=True;TrustServerCertificate=true"
