--- a/services/identity/src/IdentityService.HttpApi.Host/appsettings.json
+++ b/services/identity/src/IdentityService.HttpApi.Host/appsettings.json
@@ -2,7 +2,7 @@
     "App": {
         "SelfUrl": "https://localhost:44362",
         "AngularUrl": "http://localhost:4200",
-        "CorsOrigins": "https://*.IdentityService.com,http://localhost:4200,https://localhost:44327,https://localhost:44305",
+        "CorsOrigins": "https://*.IdentityService.com,http://localhost:4200,https://localhost:44327,https://localhost:44305,http://localhost:4300",
         "RedirectAllowedUrls": "http://localhost:4200",
         "DisablePII": false,
         "HealthCheckUrl": "/health-status"
